added points to SB note